After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737060 - Fix deprecation warnings
Fix deprecation warnings
Status: RESOLVED FIXED
Product: five-or-more
Classification: Applications
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: five-or-more-maint
five-or-more-maint
Depends on:
Blocks:
 
 
Reported: 2014-09-21 04:49 UTC by Robert Roth
Modified: 2014-09-23 18:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Deprecation fixes (2.71 KB, patch)
2014-09-21 04:50 UTC, Robert Roth
committed Details | Review

Description Robert Roth 2014-09-21 04:49:33 UTC
There are some deprecation warnings regarding rsvg include, rsvg init, stock items and dialog action_area usage. These should be fixed.
Comment 1 Robert Roth 2014-09-21 04:50:26 UTC
Created attachment 286719 [details] [review]
Deprecation fixes

Fixed deprecated direct rsvg include, rsvg init and stock items usage.
Comment 2 Michael Catanzaro 2014-09-21 16:36:51 UTC
Review of attachment 286719 [details] [review]:

Thanks!
Comment 3 Robert Roth 2014-09-23 18:40:07 UTC
Attachment 286719 [details] pushed as 518d483 - Deprecation fixes