Deprecation fixes

Fixed deprecated direct rsvg include, rsvg init and stock items usage.

https://bugzilla.gnome.org/show_bug.cgi?id=737060